[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "quilo"
version = "0.1.0"
description = "Official Python client for the Quilo API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Quilo" }]
keywords = ["quilo", "pdf", "education", "api"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
quilo = "quilo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quilo"]
